--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -233,6 +233,19 @@ a:hover, button:hover {
 	display: flex;
 	justify-content: center;
 }
+
+/* ここから追加機能関連のレイアウト */
+input.sentReviewBtn_box {
+	display: flex;
+	justify-content: center;
+}
+
+div.reviewContents {
+	width: 300px;
+	height: 150px;
+	border: 2px solid #666666;
+	overflow: scroll;
+}
 /* 一括画面のファイル選択のボタン */
 .button.btn_bulkRegist {
 	display: flex;
